# esp32-homekit-garagedoor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile.sh  flash.sh  sdkconfig  sdkconfig.base  sdkconfig.defaults
.github/workflows/: devbuild.yml  releasebuild.yml
case/: garagedoorswitchblock.scad  project_box_espgarage.scad
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  garagedoor.c  garagedoor.h  homekit_states.c  homekit_states.h  idf_component.yml
main/include/: garagedoor.h  homekit_states.h
main/src/: app_main.c  garagedoor.c  homekit_states.c
